# sd_error_corrector

./: environment.yaml  pyproject.toml  readme.md  requirements.txt
audio_samples/corrected/: 4065.txt  IS1009a.Mix-Headset_2.txt  luobn.txt
audio_samples/corrected_sd/: gkiki_corrected.txt  q2ec7_corrected.txt
audio_samples/transcribed/: 4065.json  IS1009a.Mix-Headset_2.json  gkiki.json  gkiki.txt  luobn.json  q2ec7.json  q2ec7.txt
audio_samples/transcribed_as_textfile/: 4065.txt  IS1009a.Mix-Headset.txt  luobn.txt
scripts/: enhance_audio.sh  inference.py  run_train.sh  test.py  test.sh  test_model.py  train.py  train.sh  train_model.py  train_no_fusion.py  train_no_fusion.sh  train_scheduled.py  train_scheduled.sh  train_test_model.py  transcribe.sh  transcribe_bash_example.sh  transcribe_file.py  transcribe_watson.py
scripts/test/: inference.py  inference.sh  test.py  test.sh
scripts/train/: train.py  train.sh  train_fused_fixed_noise_10_bash_script_example.sh  train_scheduled.py
src/: sd_error_correction.py  sdec_pipeline.py
src/data_lib/: data_inspection.py  data_prep.py  data_prep_santa_barbara.py  data_prep_switchboard.py  lightning_data_module.py
src/data_libs/: data_prep.py  lightning_data_module.py  metrics.py  sd_data.py  sd_datamodule.py  switchboard_prep.py  switchboard_utils.py  utils.py
src/modeling/: lex_corrector_model.py  lightning_sd_model.py  sd_classification.py  sd_model.py
src/modelling/: lightning_sd_model.py  lightning_sd_model_no_fusion.py  lightning_sd_model_scheduled.py
src/performance_tracking/: classification_metrics.py  (+1 more)
(+22 files in other folders)
